--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@typeform/embed-react": "^4.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-player": "^2.16.0"
