Configure Vite for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "meu-site-react",
+  "homepage": "https://ogabrieloliver.github.io/lp-home",
   "private": true,
   "version": "0.0.0",
   "type": "module",
